# vulkan-no-xcode

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
lib/vulkan/explicit_layer.d/: VkLayer_api_dump.json  VkLayer_khronos_profiles.json  VkLayer_khronos_shader_object.json  VkLayer_khronos_synchronization2.json  VkLayer_khronos_validation.json  VkLayer_screenshot.json
lib/vulkan/icd.d/: MoltenVK_icd.json
src/: main.cpp
